--- a/network/frontend/network/package.json
+++ b/network/frontend/network/package.json
@@ -8,14 +8,14 @@
 		"@testing-library/user-event": "^13.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-scripts": "5.0.1",
+		"react-scripts": "4.0.3",
 		"web-vitals": "^2.1.0"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "env CHOKIDAR_USEPOLLING=true react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"dev": "nodemon --watch src --exec 'yarn start'"
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": [
